# attribute_lens

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_experiments.sh
configs/: affine_ce.yaml  affine_combined.yaml  affine_kld.yaml  attribution_default.yaml  default.yaml  default_deit3_l16.yaml  default_dinov2_l14.yaml  default_vit_l16.yaml  deit_patch_map_full.yaml  dino_patch_map_full.yaml  mlp_ce.yaml  mlp_combined.yaml  mlp_kld.yaml  patch_affine_kld.yaml  patch_map.yaml  patch_map_full.yaml  patch_map_lowrank.yaml  patch_mlp_kld.yaml  vit_patch_map_full.yaml
configs/deit/: exp_nb_score_la_weighted.yaml  exp_nb_score_la_weighted_2.yaml  exp_nb_score_la_weighted_3.yaml  exp_nb_score_la_weighted_4.yaml
configs/experiments/: exp_nb_emb_la_uniform.yaml  exp_nb_emb_la_weighted.yaml  exp_nb_emb_no_la.yaml  exp_nb_score_la_uniform.yaml  exp_nb_score_la_weighted.yaml  exp_nb_score_la_weighted_10.yaml  exp_nb_score_la_weighted_11.yaml  exp_nb_score_la_weighted_12.yaml  exp_nb_score_la_weighted_13.yaml  exp_nb_score_la_weighted_14.yaml  exp_nb_score_la_weighted_15.yaml  exp_nb_score_la_weighted_2.yaml  exp_nb_score_la_weighted_3.yaml  exp_nb_score_la_weighted_4.yaml  exp_nb_score_la_weighted_5.yaml  exp_nb_score_la_weighted_6.yaml  exp_nb_score_la_weighted_7.yaml  exp_nb_score_la_weighted_8.yaml  exp_nb_score_la_weighted_9.yaml  exp_nb_score_no_la.yaml  exp_no_nb_la_uniform.yaml  exp_no_nb_la_weighted.yaml  exp_no_nb_no_la.yaml
configs/vit/: exp_nb_score_la_uniform.yaml  exp_nb_score_la_uniform_2.yaml  exp_nb_score_la_uniform_3.yaml  exp_nb_score_la_uniform_4.yaml  exp_nb_score_la_uniform_5.yaml  exp_nb_score_la_uniform_6.yaml  exp_nb_score_la_weighted.yaml  exp_nb_score_la_weighted_2.yaml  exp_nb_score_la_weighted_3.yaml  exp_nb_score_la_weighted_4.yaml
notebooks/: 00_extract_embeddings.ipynb  01_patch_lens_scoring.ipynb  02_cls_lens_individual_scoring.ipynb  03_cls_lens_mean_adjusted_scoring.ipynb  04_patch_map_scoring.ipynb  center_crop_test.ipynb  fg_bg_layer_weights.ipynb  fg_bg_layer_weights_deit_res.ipynb  fg_bg_layer_weights_vit_res.ipynb  token_embedding_analysis.ipynb  val_accuracy_head.ipynb
scripts/: run_all_configs.sh
src/attribute_lens/: README.md  __init__.py  config.py  evaluate.py  metrics.py  postprocess.py  scorer.py  visualize.py
src/tuned_lens/: README.md  __init__.py  bbox_data.py  config.py  contrastive_trainer.py  data.py  lens.py  (+5 more)
(+6 files in other folders)
