[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attribute-lens"
version = "0.1.0"
description = "Tuned lens training for vision transformer interpretability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "timm>=1.0",
    "pytorch-lightning>=2.0",
    "optuna>=3.0",
    "pyyaml",
    "safetensors",
    "tensorboard",
    "pillow",
    "matplotlib",
    "scikit-learn",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ipykernel"]

[project.scripts]
tuned-lens-train = "tuned_lens.scripts.train:main"
prepare-imagenet = "tuned_lens.scripts.prepare_imagenet:main"
attribute-lens-eval = "attribute_lens.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]
